kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexvion
  labels:
    name: nexvion
    app.kubernetes.io/name: nexvion
    app.kubernetes.io/part-of: nexvion-platform
